# FileSyncHub

./: .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.toml
credentials/: onedrive.json
docs/: README.md  _config.yml  index.md
docs/api/: index.md
docs/contributing/: index.md
docs/examples/: index.md
docs/user-guide/: advanced-configuration.md  advanced-features.md  automated-sync.md  google-drive-setup.md  index.md  onedrive-setup.md  plugin-development.md  sync-configuration.md  troubleshooting.md
examples/: config.toml  run_as_service.rs  sync_documents.rs  sync_with_google_drive.rs  sync_with_onedrive.rs  sync_with_tui.rs
examples/config/: example_config.toml
examples/credentials/: google_drive_example.json  onedrive_example.json
src/: cache.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  service.rs  stats.rs  sync.rs  watcher.rs
src/plugins/: google_drive.rs  mod.rs  onedrive.rs
src/provider/: factory.rs  google_drive.rs  mod.rs  onedrive.rs  onedrive_test.rs
src/sync/: mod.rs  performance.rs  safety.rs
src/tui/: app.rs  mod.rs  ui.rs
test_dir/: sample.txt
test_dir/docs/: document.txt  notes.md
tests/: auth_test.rs  config_test.rs  integration_test.rs  plugin_test.rs  watcher_test.rs
