[package]
name = "filesync"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Pimentel <felipe.pimentel@gmail.com>"]
description = "A file synchronization tool with support for Google Drive and OneDrive"
license = "MIT"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.0"
log = "0.4.20"
env_logger = "0.10.0"
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.73"
notify = "6.1.1"
mime_guess = "2.0.4"
clap = { version = "4.4", features = ["derive"] }

# Google Drive
google-drive3 = "5.0.3"
hyper = "0.14.27"
hyper-rustls = "0.24.1"

# OneDrive
oauth2 = "4.4.2"
url = "2.4.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.8.0"
tokio-test = "0.4.3"
wiremock = "0.5.19"
