[package]
name = "filesync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0"
env_logger = "0.11"
futures = "0.3"
google-drive3 = "5.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
log = "0.4"
notify = "6.1"
oauth2 = "4.4"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
yup-oauth2 = "8.3"
